gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
      - uri:
          prefix: '/api'
        rewrite:
          uri: '/'
        route:
      route:
      - destination:
          host: student-app-api.default.svc.cluster.local
          port:
            number: 8080
    - route:
      - destination:
          host: student-app-client.default.svc.cluster.local
          port:
            number: 80
